--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build NgxThumbor",
-        "prebuild": "npm version patch",
+        "prebuild": "npm version patch && cd projects/ngx-thumbor && npm version patch && cd ../../",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
