--- a/projects/ngx-thumbor/package.json
+++ b/projects/ngx-thumbor/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "ngx-thumbor",
-  "version": "0.0.3",
-  "peerDependencies": {
-    "@angular/common": "^8.2.11",
-    "@angular/core": "^8.2.11",
-    "thumbor": "^0.1.5"
-  }
+    "name": "ngx-thumbor",
+    "version": "0.0.3",
+    "dependencies": {
+        "thumbor": "^0.1.5"
+    },
+    "peerDependencies": {
+        "@angular/common": "^8.2.11",
+        "@angular/core": "^8.2.11",
+        "thumbor": "^0.1.5"
+    }
 }
