--- a/projects/ngx-thumbor/package.json
+++ b/projects/ngx-thumbor/package.json
@@ -2,8 +2,8 @@
     "name": "ngx-thumbor",
     "version": "0.0.6",
     "peerDependencies": {
-        "@angular/common": "^8.2.11",
-        "@angular/core": "^8.2.11",
+        "@angular/common": "8.x",
+        "@angular/core": "8.x",
         "thumbor": "^0.1.5"
     }
 }
