--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
         "e2e": "ng e2e"
     },
     "peerDependencies": {
-        "@angular/common": "~8.2.13",
-        "@angular/core": "~8.2.13",
+        "@angular/common": "8.x",
+        "@angular/core": "8.x",
         "thumbor": "^0.1.5"
     },
     "dependencies": {
