--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
+        "updateVersions": "npm version patch && cd projects/ngx-thumbor && npm version patch && cd ../../",
         "build": "ng build NgxThumbor",
-        "prebuild": "npm version patch && cd projects/ngx-thumbor && npm version patch && cd ../../",
+        "publishToNpm": "npm publish",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
@@ -28,7 +29,7 @@
     "peerDependencies": {
         "@angular/common": "8.x",
         "@angular/core": "8.x",
-        "thumbor": "^0.1.5"
+        "thumbor-url-builder": "^0.1.1"
     },
     "dependencies": {
         "@angular/animations": "~8.2.13",
@@ -40,7 +41,7 @@
         "@angular/platform-browser-dynamic": "~8.2.13",
         "@angular/router": "~8.2.13",
         "rxjs": "~6.5.3",
-        "thumbor": "^0.1.5",
+        "thumbor-url-builder": "^0.1.1",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
     },
