--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
         "e2e": "ng e2e"
     },
     "peerDependencies": {
-        "@angular/common": "8.x",
-        "@angular/core": "8.x",
+        "@angular/common": "^8.2.11",
+        "@angular/core": "^8.2.11",
         "thumbor-url-builder": "^0.1.1"
     },
     "dependencies": {
