--- a/package.json
+++ b/package.json
@@ -21,49 +21,49 @@
         "start": "ng serve",
         "updateVersions": "npm version patch && cd projects/ngx-thumbor && npm version patch && cd ../../",
         "build": "ng build NgxThumbor",
-        "publishToNpm": "cd projects/ngx-thumbor && npm publish && cd ../../",
+        "publishToNpm": "cd dist/ngx-thumbor && npm publish && cd ../../",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
     },
     "peerDependencies": {
-        "@angular/common": "^8.2.11",
-        "@angular/core": "^8.2.11",
+        "@angular/common": "^8.2.14",
+        "@angular/core": "^8.2.14",
         "thumbor-url-builder": "^0.1.1"
     },
     "dependencies": {
         "@angular/common": "~8.2.13",
-        "@angular/compiler": "~8.2.13",
+        "@angular/compiler": "~8.2.14",
         "@angular/core": "~8.2.13",
-        "@angular/platform-browser": "~8.2.13",
-        "@angular/platform-browser-dynamic": "~8.2.13",
+        "@angular/platform-browser": "~8.2.14",
+        "@angular/platform-browser-dynamic": "~8.2.14",
         "rxjs": "~6.5.3",
         "thumbor-url-builder": "^0.1.1",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.803.17",
-        "@angular-devkit/build-ng-packagr": "~0.803.17",
-        "@angular/cli": "~8.3.17",
-        "@angular/compiler-cli": "~8.2.13",
-        "@angular/language-service": "~8.2.13",
-        "@types/node": "~12.12.5",
-        "@types/jasmine": "~3.4.5",
+        "@angular-devkit/build-angular": "~0.803.20",
+        "@angular-devkit/build-ng-packagr": "~0.803.20",
+        "@angular/cli": "~8.3.20",
+        "@angular/compiler-cli": "~8.2.14",
+        "@angular/language-service": "~8.2.14",
+        "@types/node": "~12.12.14",
+        "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.8",
         "codelyzer": "^5.2.0",
         "jasmine-core": "~3.5.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~4.4.1",
         "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~2.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.1",
         "karma-jasmine": "~2.0.1",
         "karma-jasmine-html-reporter": "^1.4.2",
         "ng-packagr": "^5.7.1",
         "protractor": "~5.4.2",
-        "ts-node": "~8.4.1",
-        "tsickle": "^0.37.0",
-        "tslint": "~5.20.0",
-        "typescript": "~3.5.3"
+        "ts-node": "~8.5.4",
+        "tsickle": "^0.37.1",
+        "tslint": "~5.20.1",
+        "typescript": "~3.7.3"
     }
 }
